# arkham_test

./: .gitignore  README.md  build.gradle  e2e.bat  e2e.command  e2e.sh  run-dev.bat  run-dev.command  run-dev.sh  settings.gradle  setup-content.bat  setup-content.command  setup-content.sh  start-client.bat  start-client.command  start-client.sh  start-server.bat  start-server.command  start-server.sh
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/scripts/: sync-deckbuilder.mjs
client/src/: main.ts  profile.ts  protocol.ts  saves.ts
content/: .gitignore  README.md  packs.json
content/reference/: README.md  artwork.json  campaigns.json  characters-in-art.json  investigators.json  packs.json  (+1 more)
docs/: 00-overview.md  01-game-rules.md  02-design-spec.md  03-tech-requirements.md  04-roadmap-risks.md  05-rules-engine-spec.md  06-card-data-and-images.md  07-lan-setup.md  08-save-and-provenance.md  09-lobby-save-handshake.md  10-rulebook-zh.md  11-engine-backlog.md  README.md
e2e/: ability-e2e.mjs  campaign-log-e2e.mjs  chapter-e2e.mjs  char-vote-e2e.mjs  deckbuild-e2e.mjs  dynamic-roster-e2e.mjs  gameplay-e2e.mjs  hand-limit-e2e.mjs  lobby-e2e.mjs  protocol-e2e.mjs  run.mjs  sandbox-e2e.mjs  save-reload-e2e.mjs  seat-claim-e2e.mjs  stability-e2e.mjs  trauma-e2e.mjs
engine/: README.md  build.gradle
protocol/: messages.ts  protocol.md
prototype/: README.md  deckbuilder.html  index.html
server/: README.md  build.gradle
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
(+89 files in other folders)
